# BennuGD_libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile.vita  README.md
core/: CMakeLists.txt  README  make-fakedl.sh
core/bgdi/: CMakeLists.txt
core/bgdi/include/: bgdi.h
core/bgdi/src/: main.c
core/bgdrtm/include/: bgdrtm.h  sysprocs_p.h
core/bgdrtm/src/: config.c  copy.c  dcbr.c  dirs.c  fmath.c  instance.c  interpreter.c  misc.c  strings.c  sysprocs.c  varspace_file.c
core/common/: allocator.c  b_crypt.c  bgd_version.c  debug.c  files.c  rpmalloc.c  xctype.c
core/include/: allocator.h  arrange.h  b_crypt.h  bgd_version.h  bgdcore.h  bgddl.h  commons_defs.h  dcb.h  dirs.h  dlvaracc.h  fake_dl.h  files.h  files_st.h  fmath.h  i_procdef.h  i_procdef_st.h  instance.h  instance_st.h  loadlib.h  memoverride.h  offsets.h  pslang.h  sysprocs.h  sysprocs_st.h  typedef.h  typedef_st.h  varspace_file.h  xctype.h  xctype_st.h  xstrings.h
libretro/: CMakeLists.txt  filestream_gzip.c  filestream_gzip.h  filesystem.c  filesystem.h  libco.c  libretro.c
libretro/sdl-libretro/: CMakeLists.txt
libretro/sdl-libretro/include/: SDL_config.h  SDL_config_libretro.h  SDL_endian.h  SDL_stdinc.h  SDL_thread.h  SDL_timer.h
libretro/sdl-libretro/patches/: ApplyPatch.cmake  patch_ogg_min_required_version.patch  patch_vorbis_min_required_version.patch
libretro/sdl-libretro/sdl_mixer/: music.c
libretro/sdl-libretro/src/: SDL.c
libretro/sdl-libretro/src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_sysaudio.h
libretro/sdl-libretro/src/events/: SDL_events.c
libretro/sdl-libretro/src/joystick/libretro/: SDL_sysjoystick.c
libretro/sdl-libretro/src/stdlib/: SDL_getenv.c
libretro/sdl-libretro/src/thread/: SDL_thread.c  SDL_thread_c.h
libretro/sdl-libretro/src/thread/generic/: SDL_sysmutex.c  SDL_systhread.c
libretro/sdl-libretro/src/thread/libretro/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_systhread.c  (+1 more)
libretro/sdl-libretro/src/timer/: SDL_timer.c  SDL_timer_c.h
libretro/sdl_mixer-libretro/: CMakeLists.txt  dynamic_mod.h
libretro/sdl_mixer-libretro/patches/: ApplyPatch.cmake  patch_ogg_min_required_version.patch  patch_vorbis_min_required_version.patch
modules/: CMakeLists.txt  COPYING  README
modules/libbgload/: CMakeLists.txt  bgload.c  bgload.h
modules/libblit/: g_blit.c  g_blit.h  g_pixel.c  g_pixel.h  libblit.c  libblit.h  libblit_exports.h
modules/libdraw/: CMakeLists.txt  libdraw.c  libdraw.h
modules/libfont/: libfont.c  libfont.h  libfont_exports.h
modules/libgrbase/: bitwise_map.h  g_bitmap.c  g_bitmap.h  g_blendop.c  g_blendop.h  g_clear.c  g_clear.h  g_conversion.c  g_conversion.h  g_grlib.c  g_grlib.h  g_pal.c  g_pal.h  g_region.h  libgrbase.c  libgrbase.h  libgrbase_exports.h  resolution.h
modules/libjoy/: CMakeLists.txt  libjoy.c  libjoy.h  libjoy_exports.h
modules/libjoy/caanoo/: i2c-dev.h
modules/libkey/: libkey.c  libkey.h  libkey_exports.h
modules/libmouse/: CMakeLists.txt  libmouse.c  libmouse_exports.h
modules/librender/: CMakeLists.txt  g_fade.c  g_fade.h  g_frame.c  g_frame.h  g_instance.c  g_instance.h  g_object.c  g_object.h  g_rects.c  g_rects.h  g_screen.c  g_screen.h  librender.c  librender.h  librender_exports.h  scaler.h  scaler_hq2x.c  scaler_hq2x.h  scaler_normal.c  scaler_normal.h  scaler_scale2x.c  scaler_scale2x.h  scaler_scanline.c  scaler_scanline.h
modules/libscroll/: libscroll.c  libscroll.h  libscroll_exports.h
modules/libsdlhandler/: CMakeLists.txt  libsdlhandler.c
modules/libtext/: CMakeLists.txt  libtext.c  libtext.h  libtext_exports.h
modules/libvideo/: g_regions.c  g_regions.h  g_video.c  g_video.h  libvideo.h  libvideo_exports.h
modules/libwm/: CMakeLists.txt  libwm.c  libwm_exports.h
modules/mod_blendop/: CMakeLists.txt  mod_blendop.c  mod_blendop_exports.h
modules/mod_cd/: CMakeLists.txt  mod_cd.c  mod_cd_exports.h
modules/mod_crypt/: mod_crypt.c  mod_crypt_exports.h
modules/mod_debug/: CMakeLists.txt  mod_debug.c  mod_debug_exports.h  systexts.c
modules/mod_dir/: CMakeLists.txt  mod_dir.c  mod_dir_exports.h
modules/mod_draw/: CMakeLists.txt  mod_draw.c  mod_draw_exports.h
modules/mod_effects/: mod_effects.c  mod_effects.h  mod_effects_exports.h
modules/mod_file/: mod_file.c  mod_file_exports.h
modules/mod_flic/: CMakeLists.txt  mod_flic.c  mod_flic.h  mod_flic_exports.h
modules/mod_grproc/: CMakeLists.txt  mod_grproc.c  mod_grproc_exports.h
modules/mod_joy/: CMakeLists.txt  mod_joy.c  mod_joy_exports.h
modules/mod_key/: CMakeLists.txt  mod_key.c  mod_key_exports.h
modules/mod_m7/: mod_m7.c  mod_m7.h  mod_m7_exports.h
modules/mod_map/: CMakeLists.txt  file_fnt.c  file_fpg.c  file_map.c  file_pal.c  file_pcx.c  file_png.c  mod_map.c  mod_map.h  mod_map_exports.h
modules/mod_math/: mod_math.c  mod_math_exports.h
modules/mod_mathi/: mod_mathi.c  mod_mathi_exports.h
modules/mod_mem/: mod_mem.c  mod_mem_exports.h
modules/mod_mouse/: mod_mouse.c  mod_mouse_exports.h
modules/mod_path/: mod_path.c  mod_path.h  mod_path_exports.h
modules/mod_proc/: mod_proc.c  mod_proc.h  mod_proc_exports.h
modules/mod_rand/: mod_rand.c  mod_rand_exports.h
modules/mod_regex/: CMakeLists.txt  mod_regex.c  mod_regex_exports.h  regex.c  regex.h
modules/mod_say/: mod_say.c  mod_say_exports.h
modules/mod_screen/: CMakeLists.txt  mod_screen.c  mod_screen_exports.h
modules/mod_scroll/: CMakeLists.txt  mod_scroll.c  mod_scroll_exports.h
modules/mod_sort/: mod_sort.c  mod_sort_exports.h
modules/mod_sound/: CMakeLists.txt  mod_sound.c  mod_sound_exports.h
modules/mod_string/: mod_string.c  mod_string_exports.h
modules/mod_sys/: mod_sys.c  mod_sys.h  mod_sys_exports.h
modules/mod_text/: CMakeLists.txt  mod_text.c  mod_text_exports.h
modules/mod_time/: CMakeLists.txt  mod_time.c  mod_time_exports.h
modules/mod_timers/: mod_timers.c  mod_timers_exports.h
modules/mod_ttf/: CMakeLists.txt  mod_ttf.c  mod_ttf_exports.h
modules/mod_video/: mod_video.c  mod_video_exports.h
modules/mod_wm/: CMakeLists.txt  mod_wm.c  mod_wm_exports.h
(+30 files in other folders)
